@@ -1260,8 +1260,6 @@ function ShowLights()
   
   RefreshLightSwitchesComboArray();
   
-  $.myglobals.ismobile=( /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) );
-  
   var htmlcontent = '';
   var bHaveAddedDevider = false;
 
@@ -1556,7 +1554,7 @@ function ShowLights()
   $('#lightcontent').i18n();
 
 	if (window.my_config.userrights==2) {
-	  if ($.myglobals.ismobile==false) {
+	  if ($.myglobals.ismobileint==false) {
 			$("#lightcontent .span4").draggable({
 					drag: function() {
 						clearInterval($.myglobals.refreshTimer);
